<resources>
    <string name="app_name">cmpt276A2</string>
    <!--Main Activity-->
    <string name="title_main_activity">Depth of Field Calculator</string>
    <string name="select_a_lens_to_use">Select a lens to use:</string>
    <string name="empty">There are no saved lens.\nPlease add new lens!</string>
    <string name="instructions">Instructions:\n
        1. Press the add button on the bottom right.\n
        2. Fill in the make, focal length, and max aperture.\n
        3. Once completed, press the save button on the top right.</string>
    <string name="features">Optional Features\n
        1. App Bar Button\n
        2. Edit/Delete Lens (Delete shown when editing)\n
        3. Error Checking Inputs (Also forced input types)\n
        4. Auto-recalculate\n
        6. Lens Icon (5 colours)\n
        7. Empty State</string>
    <!--Item View-->
    <string name="make">Make</string>
    <string name="focalpoint">Focalpoint</string>
    <string name="aperture">Aperture</string>
    <!--Add Lens Activity-->
    <string name="title_add_lens">Lens Details</string>
    <string name="hint_make">ex: Canon</string>
    <string name="focal_length">Focal Length [mm]</string>
    <string name="hint_focal">ex: 200 for 200mm</string>
    <string name="hint_aperture">ex: 2.8 for F2.8</string>
    <string name="icon">Icon</string>
    <string name="len_image">Len Image</string>
        <!--Add Lens class-->
    <string name="error_make">Error: Make is empty</string>
    <string name="error_focal_empty">Error: Focal Length is empty</string>
    <string name="error_focal_string">Error: Focal Length needs to be a integer</string>
    <string name="error_focal">Error: Focal Length needs to be a positive number</string>
    <string name="error_aperture_empty">Error: Aperture is empty</string>
    <string name="error_aperture_string">Error: Aperture needs to be a number</string>
    <string name="error_aperture">Error: Aperture need to be at least 1.4</string>
    <!--Calculate DOF Activity-->
    <string name="title_calculate_dof">Calculate DoF</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="hyperfocal">HyperFocal</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="far_focal">Far Focal</string>
    <string name="len">Len</string>
    <string name="near_focal">Near Focal</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="hint_coc">ex: 0.029</string>
    <string name="hint_distance">ex: 1.5 for 1.5m</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="circle_of_confusion_m">Circle of Confusion [m]</string>
    <string name="backarrowdof">backarrowDoF</string>
    <string name="invalid_coc">Invalid CoC</string>
    <string name="invalid_distance">Invalid Distance</string>
    <string name="invalid_aperture">Invalid Aperture</string>
    <string name="invalid_values">Enter all values</string>
    <string name="coc_input">0.029</string>
    <string name="add">add</string>
</resources>